Emoji framework completed
